User profile page fix on mobile phone resolution

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -142,25 +142,6 @@ h1{
 .profile-head h6{
   color: #0062cc;
 }
-.profile-edit-btn{
-  border: none;
-  border-radius: 1.5rem;
-  width: 70%;
-  padding: 2%;
-  font-weight: 600;
-  color: #6c757d;
-  cursor: pointer;
-}
-.proile-rating{
-  font-size: 12px;
-  color: #818182;
-  margin-top: 5%;
-}
-.proile-rating span{
-  color: #495057;
-  font-size: 15px;
-  font-weight: 600;
-}
 .profile-head .nav-tabs{
   margin-bottom:5%;
 }
@@ -187,8 +168,13 @@ h1{
   font-weight: 600;
   color: #0062cc;
 }
-.tab-content{
-  margin-top: -17%;
+@media only screen and (max-width: 992px) {
+  .tab-content{
+    margin-top: -1% !important;
+  }
+  .profile-head-name{
+    display: none;
+  }
 }
 .general-info{
   color:white;
